<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_options"
        tools:context=".OptionsActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
            android:gravity="top|left">
        <TextView
                android:text="@string/connect_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/connectAccount"
                android:layout_marginTop="20dp" android:textColor="#000000" android:textAlignment="center"
                android:layout_marginBottom="40dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/login_block">
            <TextView
                    android:text="error message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/error_message" android:textColor="#FC0303"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/cabin_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/keytitle" android:layout_weight="1"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions"
                        android:ems="10"
                        android:id="@+id/cabin_key" android:layout_weight="1"
                        android:importantForAutofill="no"
                        android:labelFor="@string/cabin_key"/>
            </LinearLayout>
            <Button
                    android:text="@string/connect_button"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/login_button" android:layout_weight="1"
                    android:backgroundTint="#E4007E" android:textColor="#FFFFFF"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:id="@+id/logout_block">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/user_account"
                        android:layout_width="25dp"
                        android:layout_height="wrap_content" android:id="@+id/user_title" android:layout_weight="1"/>
                <TextView
                        android:text="@string/user_user_com"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_email" android:layout_weight="2"
                        android:textStyle="bold"/>
            </LinearLayout>
            <Button
                    android:text="@string/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" android:id="@+id/logout_button" android:layout_weight="1"
                    android:backgroundTint="#E4007E" android:textColor="#FFFFFF"/>
        </LinearLayout>
        <TextView
                android:text="@string/cabin_key_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/connectDetails" android:layout_marginTop="50dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:textColor="#A0A0A0"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"
            android:padding="20dp" android:background="#D7D7D7">
        <TextView
                android:text="@string/about_cabinar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView" android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
        <TextView
                android:text="@string/create_and_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_marginBottom="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>